--- a/xiaobird/index.html
+++ b/xiaobird/index.html
@@ -94,7 +94,7 @@
               <div class="contact-info">
                 <p class="contact-title">居住地</p>
 
-                <address>新北, 台灣</address>
+                <address>台灣</address>
               </div>
             </li>
           </ul>
@@ -126,6 +126,7 @@
           <section class="about-text">
             <img src="./assets/images/正面.png" width="100%" />
           </section>
+          <br>
           <section class="about-text">
             <img src="./assets/images/背面.png" width="100%" />
           </section>
