--- a/xiaobird/index.html
+++ b/xiaobird/index.html
@@ -68,7 +68,7 @@
               <div class="contact-info">
                 <p class="contact-title">電子郵件</p>
 
-                <a href="mailto:richard@example.com" class="contact-link"
+                <a href="mailto:xiaobird@newnight.store" class="contact-link"
                   >xiaobird@newnight.store</a
                 >
               </div>
