--- a/haimu/index.html
+++ b/haimu/index.html
@@ -68,7 +68,7 @@
               <div class="contact-info">
                 <p class="contact-title">電子郵件</p>
 
-                <a href="mailto:richard@example.com" class="contact-link"
+                <a href="mailto:haimu@newnight.store" class="contact-link"
                   >haimu@newnight.store</a
                 >
               </div>
