--- a/haimu/index.html
+++ b/haimu/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh_tw">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -68,8 +68,8 @@
               <div class="contact-info">
                 <p class="contact-title">電子郵件</p>
 
-                <a href="mailto:haimu@newnight.store" class="contact-link"
-                  >haimu@newnight.store</a
+                <a href="mailto:haimu@newnight.tw" class="contact-link"
+                  >haimu@newnight.tw</a
                 >
               </div>
             </li>
@@ -126,23 +126,15 @@
           <section class="about-text">
             <img src="./assets/images/正面.png" width="100%" />
           </section>
-          <br>
+          <br />
           <section class="about-text">
             <img src="./assets/images/背面.png" width="100%" />
           </section>
-
         </article>
       </div>
     </main>
-
-    <!--
-    - custom js link
-  -->
+    
     <script src="./assets/js/script.js"></script>
-
-    <!--
-    - ionicon link
-  -->
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
