--- a/xiaobird/index.html
+++ b/xiaobird/index.html
@@ -68,8 +68,8 @@
               <div class="contact-info">
                 <p class="contact-title">電子郵件</p>
 
-                <a href="mailto:xiaobird@newnight.store" class="contact-link"
-                  >xiaobird@newnight.store</a
+                <a href="mailto:xiaobird@newnight.tw" class="contact-link"
+                  >xiaobird@newnight.tw</a
                 >
               </div>
             </li>
@@ -94,7 +94,7 @@
               <div class="contact-info">
                 <p class="contact-title">居住地</p>
 
-                <address>台灣</address>
+                <address>新北, 台灣</address>
               </div>
             </li>
           </ul>
@@ -103,7 +103,10 @@
 
           <ul class="social-list">
             <li class="social-item">
-              <a href="https://www.youtube.com/@Xiaobird_TW" class="social-link">
+              <a
+                href="https://www.youtube.com/@Xiaobird_TW"
+                class="social-link"
+              >
                 <ion-icon name="logo-youtube"></ion-icon>
               </a>
             </li>
@@ -126,23 +129,15 @@
           <section class="about-text">
             <img src="./assets/images/正面.png" width="100%" />
           </section>
-          <br>
+          <br />
           <section class="about-text">
             <img src="./assets/images/背面.png" width="100%" />
           </section>
-
         </article>
       </div>
     </main>
 
-    <!--
-    - custom js link
-  -->
     <script src="./assets/js/script.js"></script>
-
-    <!--
-    - ionicon link
-  -->
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
