--- a/xiaobird/index.html
+++ b/xiaobird/index.html
@@ -94,7 +94,7 @@
               <div class="contact-info">
                 <p class="contact-title">居住地</p>
 
-                <address>新北, 台灣</address>
+                <address>台北, 台灣</address>
               </div>
             </li>
           </ul>
@@ -112,7 +112,7 @@
             </li>
 
             <li class="social-item">
-              <a href="https://www.instagram.com/_xiaobird" class="social-link">
+              <a href="https://www.instagram.com/_xiaobird._" class="social-link">
                 <ion-icon name="logo-instagram"></ion-icon>
               </a>
             </li>
